[metadata]
name = mask-sqlalchemy
version = attr: mask_sqlalchemy.__version__
url = https://github.com/Eastwu5788/Mask-SQLAlchemy
project_urls =
    Document = https://github.com/Eastwu5788/Mask-SQLAlchemy
    Source Code = https://github.com/Eastwu5788/Mask-SQLAlchemy
    Issue = https://github.com/Eastwu5788/Mask-SQLAlchemy/issues
license = MIT
author = Wu Dong
author_email = wudong@eastwu.cn
description = SQLAlchemy extension for Mask.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
include = mask_sqlalchemy, mask_sqlalchemy.*